--- a/clothing_sale2/src/main/resources/language_en_US.properties
+++ b/clothing_sale2/src/main/resources/language_en_US.properties
@@ -5,6 +5,8 @@ email = E-mail
 email2=Please fill in your E-mail
 password= Password
 password2=Please fill in your password
+password3=New Password
+password4=Please fill in your new password
 rememberMe =Remember me
 forgottenPassword=ForgottenPassword 
 regist=Regist
@@ -20,3 +22,7 @@ phone=phone
 phone2=Please fill in your phone
 man=man
 woman=woman
+refindPwd=refind password
+reset=reset
+yzm=verification code
+yzm2=Please fill in verification code
