--- a/clothing_sale2/src/main/resources/language_zh_CN.properties
+++ b/clothing_sale2/src/main/resources/language_zh_CN.properties
@@ -5,6 +5,8 @@ email = \u90AE\u7BB1
 email2=\u8BF7\u586B\u5199\u60A8\u7684\u90AE\u7BB1
 password= \u5BC6\u7801
 password2=\u8BF7\u586B\u5199\u60A8\u7684\u5BC6\u7801
+password3=\u65B0\u5BC6\u7801
+password4=\u8BF7\u586B\u5199\u60A8\u7684\u65B0\u5BC6\u7801
 rememberMe =\u8BB0\u4F4F\u6211
 forgottenPassword=\u5FD8\u8BB0\u5BC6\u7801 
 regist=\u6CE8\u518C
@@ -20,3 +22,7 @@ phone=\u7535\u8BDD
 phone2=\u8BF7\u586B\u5199\u60A8\u7684\u7535\u8BDD
 man=\u7537
 woman=\u5973
+reset=\u91CD\u7F6E
+refindPwd=\u627E\u56DE\u5BC6\u7801
+yzm=\u9A8C\u8BC1\u7801
+yzm2=\u8BF7\u586B\u5199\u9A8C\u8BC1\u7801
